--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Assignment9</string>
     <string name="name">Belt suit blazer</string>
     <string name="price">$120</string>
+    <string name="btnText">All</string>
 </resources>
