--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="name">Belt suit blazer</string>
     <string name="price">$120</string>
     <string name="btnText">All</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="purchase">Purchase</string>
+    <string name="your_cart">Your Cart</string>
 </resources>
